--- a/Boodschappenlijstje 1 + 2/Boodschappenlijstje 2/Boodschappenlijstje.html
+++ b/Boodschappenlijstje 1 + 2/Boodschappenlijstje 2/Boodschappenlijstje.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <script src="custom.js" charset="utf-8" async></script>
   </head>
   <body>
 <div class="container-fluid">
@@ -20,10 +19,13 @@
       <p>mi tempus imperdiet nulla malesuada pellentesque elit eget gravida cum</p>
     </div>
     <div class="col-2">
-      <input class="quantityInput" type="number" name="quantity" value="1" min="1" onchange="myFunction()">
+      <input class="quantityInput" type="number" name="quantity" value="0" min="0" onchange="totalPrice()">
     </div>
     <div class="col-2">
-      <h5 class="productPrice"><span class="euroSign">&#8364;</span> 1.00</h5>
+      <h5 class="productPrice">1.49</h5>
+    </div>
+    <div class="col-2">
+      <h5 id="subtotal"></h5>
     </div>
   </div>
     <!-- Product:  -->
@@ -36,10 +38,13 @@
       <p>mi tempus imperdiet nulla malesuada pellentesque elit eget gravida cum</p>
     </div>
     <div class="col-2">
-<input class="quantityInput" type="number" name="quantity" value="1" min="1" onchange="myFunction()">
+      <input class="quantityInput" type="number" name="quantity" value="0" min="0" onchange="totalPrice()">
     </div>
     <div class="col-2">
-      <h5 class="productPrice"><span class="euroSign">&#8364;</span> 0.99</h5>
+      <h5 class="productPrice">0.99</h5>
+    </div>
+    <div class="col-2">
+      <h5 id="subtotal"></h5>
     </div>
     </div>
     <!-- Product:  -->
@@ -52,10 +57,13 @@
       <p>mi tempus imperdiet nulla malesuada pellentesque elit eget gravida cum</p>
     </div>
     <div class="col-2">
-<input class="quantityInput" type="number" name="quantity" value="1" min="1" onchange="myFunction()">
+      <input class="quantityInput" type="number" name="quantity" value="0" min="0" onclick="totalPrice();">
     </div>
     <div class="col-2">
-      <h5 class="productPrice"><span class="euroSign">&#8364;</span> 1.20</h5>
+      <h5 class="productPrice">1.20</h5>
+    </div>
+    <div class="col-2">
+      <h5 id="subtotal"></h5>
     </div>
   </div>
     <!-- Product:  -->
@@ -68,10 +76,13 @@
       <p>mi tempus imperdiet nulla malesuada pellentesque elit eget gravida cum</p>
     </div>
     <div class="col-2">
-      <input class="quantityInput" type="number" name="quantity" value="1" min="1" onchange="myFunction()">
+      <input class="quantityInput" type="number" name="quantity" value="0" min="0" onchange="totalPrice()">
     </div>
     <div class="col-2">
-      <h5 class="productPrice"><span class="euroSign">&#8364;</span> 2.99</h5>
+      <h5 class="productPrice">2.99</h5>
+    </div>
+    <div class="col-2">
+      <h5 id="subtotal"></h5>
     </div>
   </div>
 </div>
@@ -79,10 +90,11 @@
   <div class="row">
     <div class="col-12">
       <h4>Totaal</h4>
-      <h5 class="totalProductPrice"><span class="euroSign">&#8364;</span> 1.00</h5>
+      <h5 id="total"></h5>
     </div>
   </div>
 </div>
+<script src="custom.js" charset="utf-8"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
